Remove flash message announcement

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -80,7 +80,7 @@ const reEndSlash = new RegExp("/$")
   </head>
   <body class="flex min-h-full flex-col overflow-x-clip">
     {
-    Astro.url.pathname.trim().replace(reStartSlash, "").replace(reEndSlash, "") !== "/ob" && (
+    Astro.url.pathname.trim().replace(reStartSlash, "").replace(reEndSlash, "") !== "/ob" && false && (
         <div class="full-bleed container relative" id="announcement">
           <div class="prose relative w-full max-w-full text-black">
             <p class="bg-yellow-400 p-4 font-bold text-black">
