--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -126,9 +126,9 @@ const reEndSlash = new RegExp("/$")
     </main>
     <footer class="mt-20">
       <div class="py-2 lg:py-4">
-        <div class="text-center">
+        <p class="text-center">
           Copyright © {new Date().getFullYear()}. {siteTitle}.
-        </div>
+        </p>
       </div>
     </footer>
     <script>
