--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import MediaPlayer from "../components/MediaPlayer";
 import ContactForm from "../components/ContactForm";
 import { FaCircleInfo as InfoIcon } from "react-icons/fa6";
 import SocialLinks from "../components/SocialLinks";
-import AlbumStreaming from "@components/AlbumStreaming.astro";
+import AlbumStreaming from "../components/AlbumStreaming.astro";
 
 import getSeparateFirstWord from "../lib/getSeparateFirstWord";
 
