--- a/src/pages/ob.astro
+++ b/src/pages/ob.astro
@@ -6,7 +6,7 @@ import FancyHR from "../components/FancyHR";
 
 import { Content } from "../content/page-partials/ob.md";
 import ImageOBCover from "../assets/img/ob-cover.png";
-import AlbumStreaming from "@components/AlbumStreaming.astro";
+import AlbumStreaming from "../components/AlbumStreaming.astro";
 ---
 
 <Layout
